--- a/flashcardpro/package.json
+++ b/flashcardpro/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.11"
+    "enzyme": "^2.9.1",
+    "react-scripts": "1.0.11",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
     "react": "^15.6.1",
