--- a/jeopardy/package.json
+++ b/jeopardy/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "enzyme": "^2.9.1",
     "react-scripts": "1.0.11",
-    "react-test-renderer": "^15.6.1"
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.2.0"
   },
   "dependencies": {
     "react": "^15.6.1",
